--- a/hazelcast-code-samples/hazelcast-integration/docker-compose/pom.xml
+++ b/hazelcast-code-samples/hazelcast-integration/docker-compose/pom.xml
@@ -11,8 +11,58 @@
 	<groupId>com.hazelcast.samples</groupId>
 	<artifactId>docker-compose</artifactId>
 	<version>0.1-SNAPSHOT</version>
+	
 	<name>Scaling Hazelcast IMDG cluster with Docker-Compose</name>
 	<description>Example application (client) and docker-compose</description>
+	
+	<properties>
+		<docker-maven-plugin.version>0.4.13</docker-maven-plugin.version>
+	</properties>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<!-- builds fat jar to be deployed as docker image -->
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>MyClient</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id> <!-- this is used for inheritance merges -->
+						<phase>package</phase> <!-- bind to the packaging phase -->
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<!-- builds docker image with hazelcast client app and dependencies -->
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>${docker-maven-plugin.version}</version>
+				<configuration>
+					<imageName>hazelcast_client_app</imageName>
+					<dockerDirectory>src/main/docker</dockerDirectory>
+					<resources>
+						<resource>
+							<targetPath>/</targetPath>
+							<directory>${project.build.directory}</directory>
+							<include>${project.build.finalName}-jar-with-dependencies.jar</include>
+						</resource>
+					</resources>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 
 </project>
