--- a/hazelcast-code-samples/hazelcast-integration/docker-compose/pom.xml
+++ b/hazelcast-code-samples/hazelcast-integration/docker-compose/pom.xml
@@ -6,57 +6,93 @@
 		<groupId>com.hazelcast.samples</groupId>
 		<artifactId>hazelcast-integration</artifactId>
 		<version>0.1-SNAPSHOT</version>
+<!-- 		<relativePath/> -->
 	</parent>
-
-	<groupId>com.hazelcast.samples</groupId>
+	
 	<artifactId>docker-compose</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	
 	<name>Scaling Hazelcast IMDG cluster with Docker-Compose</name>
 	<description>Example application (client) and docker-compose</description>
+<!-- 	<fin -->
 	
 	<properties>
-		<docker-maven-plugin.version>0.4.13</docker-maven-plugin.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+		<docker.image.prefix>dantericalde</docker.image.prefix>
+		<docker-maven-plugin.version>1.0.0</docker-maven-plugin.version>
 	</properties>
 	
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+	
 	<build>
+		<finalName>${artifactId}-${version}-jar-with-dependencies</finalName>
 		<plugins>
 			<plugin>
-				<!-- builds fat jar to be deployed as docker image -->
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>MyClient</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
-				<executions>
-					<execution>
-						<id>make-assembly</id> <!-- this is used for inheritance merges -->
-						<phase>package</phase> <!-- bind to the packaging phase -->
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+<!-- 			<plugin> -->
+<!-- 				builds fat jar to be deployed as docker image -->
+<!-- 				<artifactId>maven-assembly-plugin</artifactId> -->
+<!-- 				<configuration> -->
+<!-- 					<archive> -->
+<!-- 						<manifest> -->
+<!-- 							<mainClass>MyClient</mainClass> -->
+<!-- 						</manifest> -->
+<!-- 					</archive> -->
+<!-- 					<descriptorRefs> -->
+<!-- 						<descriptorRef>jar-with-dependencies</descriptorRef> -->
+<!-- 					</descriptorRefs> -->
+<!-- 				</configuration> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<id>make-assembly</id> this is used for inheritance merges -->
+<!-- 						<phase>package</phase> bind to the packaging phase -->
+<!-- 						<goals> -->
+<!-- 							<goal>single</goal> -->
+<!-- 						</goals> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 			</plugin> -->
 			<plugin>
 				<!-- builds docker image with hazelcast client app and dependencies -->
 				<groupId>com.spotify</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
 				<version>${docker-maven-plugin.version}</version>
 				<configuration>
-					<imageName>hazelcast_client_app</imageName>
+					<imageName>${docker.image.prefix}/hazelcast_client_app</imageName>
 					<dockerDirectory>src/main/docker</dockerDirectory>
+					
+					<!-- override tags every time image is built with docker:build -->
+					<forceTags>true</forceTags>
+					<imageTags>
+						<imageTag>${project.version}</imageTag>
+						<imageTag>latest</imageTag>
+					</imageTags>
+					
+					<!-- You should do this in deploy phase or use -DskipDockerPush -->
+					<serverId>docker-hub</serverId>
+					<registryUrl>https://hub.docker.com/</registryUrl>
+					<noCache>true</noCache>
+					
 					<resources>
 						<resource>
-							<targetPath>/</targetPath>
+							<targetPath>/</targetPath><!-- It's target/docker -->
 							<directory>${project.build.directory}</directory>
-							<include>${project.build.finalName}-jar-with-dependencies.jar</include>
+							<include>${project.build.finalName}.jar</include>
 						</resource>
 					</resources>
 				</configuration>
