--- a/hazelcast-code-samples/pom.xml
+++ b/hazelcast-code-samples/pom.xml
@@ -11,6 +11,12 @@
     <description>
         Hazelcast sample code.
     </description>
+    
+    <parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.5.6.RELEASE</version>
+	</parent>
 
     <properties>
         <main.basedir>${project.basedir}</main.basedir>
