testing embedded hz instances in cluster

--- a/hazelcast-code-samples/hazelcast-integration/docker-compose/src/main/docker/Dockerfile
+++ b/hazelcast-code-samples/hazelcast-integration/docker-compose/src/main/docker/Dockerfile
@@ -9,4 +9,4 @@ ADD *.jar /app.jar
 CMD echo "The application will start in ${SLEEP}s..." && \
 	sleep ${SLEEP} && \
 	echo "Echoing JAVA_OPTS ${JAVA_OPTS}" && \
-	java ${JAVA_OPTS} -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+	java ${JAVA_OPTS} -Djava.security.egd=file:/dev/./urandom -jar /app.jar --debug
